# flowdapt-python-sdk

./: .flake8  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
docs/: index.md
flowdapt_sdk/: __init__.py  _compat.py  client.py  constants.py  errors.py  sdk.py  serialize.py  utils.py
flowdapt_sdk/api/: __init__.py  base.py  configs.py  metrics.py  plugins.py  system.py  triggers.py  workflows.py
flowdapt_sdk/dto/: __init__.py  base.py  configs.py  error.py  metrics.py  plugin.py  resource.py  system.py  triggers.py  workflows.py
